feat(headless): Underscores in paths, clean up email verification
